--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .display-screen {
-    display: inline-block;
+    display: inline-flex;
     width: 100px;
     height: 50px;
     font-size: 25px;
