--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@
     height: 50px;
 }
 
+.equals {
+    width: 50px;
+    height: 50px;   
+}
+
 .number-button {
     width: 50px;
     height: 50px;
