--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 .display-screen {
     display: inline-flex;
-    width: 100px;
-    height: 50px;
+    width: 250px;
+    height: 100px;
     font-size: 25px;
     background-color: rgb(218, 183, 154);
 }
 
-.clear-button {
+.clear-button,
+.delete-button {
     width: 50px;
     height: 50px;
 }
 
-.operator-button {
+.operator-button,
+.equals {
     width: 50px;
     height: 50px;
 }
@@ -24,5 +26,18 @@
 .number-button {
     width: 50px;
     height: 50px;
+    margin: 0;
+    padding: 0;
 }
 
+/* General style  */
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+};
+
+.calculator-container.numbers {
+    display: flex;
+
+}
