--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@
 }
 
 /* General style  */
-/* body {
-    display: block;
-    margin: 8px;
-} */
+body {
+    display: flex;
+    margin: 0px;
+    justify-content: center;
+}
 
 .display-screen {
     display: inline-flex;
-    width: 250px;
-    height: 100px;
+    width: 200px;
+    height: 60px;
     font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--gray);
@@ -44,7 +45,7 @@
 
 .clear-button,
 .delete-button {
-    width: 50px;
+    width: 100px;
     height: 50px;
     background-color: var(--white-blue);
     color: var(--blue-dark);
@@ -59,8 +60,9 @@
 
 /* Display and sort containers and elements  */
 .calculator-container.body {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
+    /* align-items: center; */
 }
 
 .calculator-container.operators-numbers {
@@ -69,8 +71,10 @@
 }
 
 .calculator-container.numbers {
-    width: 160px;
-    /* display: flex; */
+    width: 150px;
+    display: flex;
+    flex-wrap: wrap;
+    /* gap: 2px; */
 }
 
 .calculator-container.operators {
@@ -78,3 +82,10 @@
     flex-direction: column;
 }
 
+.calculator-container.display-buttons {
+    display: flex;
+}
+
+.calculator-container.display {
+    display: flex;
+}
