--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body {
 
 .display-screen {
     display: inline-flex;
-    width: 200px;
-    height: 60px;
-    font-size: 25px;
+    width: 300px;
+    height: 90px;
+    font-size: 35px;
     font-family: Arial, Helvetica, sans-serif;
     justify-content: end;
     background-color: var(--gray);
@@ -32,35 +32,38 @@ body {
 
 /* Buttons style  */
 .number-button {
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     margin: 0;
     padding: 0;
     background-color: var(--blue-light);
-    color: var(--white-blue)
+    color: var(--white-blue);
+    font-size: 20px;
 }
 :hover.number-button {
     background-color: var(--gray);
-    color: var(--blue-dark)
+    color: var(--blue-dark);
 }
 
 .operator-button {
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     background-color: var(--blue-light);
     color: var(--white-blue);
+    font-size: 20px;
 }
 :hover.operator-button {
     background-color: var(--cyan);
-    color: var(--blue-dark)    
+    color: var(--blue-dark);    
 }
 
 .clear-button,
 .delete-button {
-    width: 100px;
-    height: 50px;
+    width: 150px;
+    height: 75px;
     background-color: var(--white-blue);
     color: var(--blue-dark);
+    font-size: 20px;
 }
 :hover.clear-button,
 :hover.delete-button {
@@ -76,10 +79,11 @@ body {
 }
 
 .equals {
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     background-color: var(--white-blue);
     color: var(--blue-dark);
+    font-size: 20px;
 }
 
 :hover.equals {
@@ -90,6 +94,7 @@ body {
 
 /* Display and sort containers and elements  */
 .calculator-container.body {
+    margin-top: 100px;
     display: inline-flex;
     flex-direction: column;
     /* align-items: center; */
@@ -101,7 +106,7 @@ body {
 }
 
 .calculator-container.numbers {
-    width: 150px;
+    width: 225px;
     display: flex;
     flex-wrap: wrap;
     /* gap: 2px; */
